feat: update swagger paths
